<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Order"
    android:background="@color/colorBackground">
    <Button
        android:id="@+id/Order_BTN_back"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:background="@drawable/back"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="30dp"
        >

        <EditText
            android:id="@+id/Order_EDT_customerMail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/customer_email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TableRow
                android:gravity="center"
                android:padding="10dp"
                android:layout_height="185dp"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/mybtnyellow"
                    android:layout_marginRight="20dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    >
                    <Button
                        android:id="@+id/Order_BTN_cocktails"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:background="@drawable/cocktail_menu"
                        android:layout_gravity="center"
                        android:textColor="#CC3636"
                        android:textSize="20dp"
                        />

                    <TextView
                        android:text="@string/cocktails"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textColor="#CC3636"
                        android:textSize="15dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/mybtnyellow"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    >
                    <Button
                        android:id="@+id/Order_BTN_Wines"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:background="@drawable/wine"
                        android:layout_gravity="center"
                        android:textColor="#CC3636"
                        android:textSize="20dp"/>
                    <TextView
                        android:text="@string/wines"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textColor="#CC3636"
                        android:textSize="15dp"
                        />
                </LinearLayout>
            </TableRow>


            <TableRow
                android:layout_height="185dp"
                android:gravity="center"
                android:padding="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/mybtnyellow"
                    android:layout_marginRight="20dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    >
                    <Button
                        android:id="@+id/Order_BTN_Daily_Beers"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:background="@drawable/beer"
                        android:layout_gravity="center"
                        android:textColor="#CC3636"
                        android:textSize="20dp" />
                    <TextView
                        android:text="@string/beers"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textColor="#CC3636"
                        android:textSize="15dp"
                        />
                </LinearLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/mybtnyellow"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/Order_BTN_Chasers"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:background="@drawable/chaser"
                        android:layout_gravity="center"
                        android:textColor="#CC3636"
                        android:textSize="20dp" />
                    <TextView
                        android:text="@string/chasers"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textColor="#CC3636"
                        android:textSize="15dp"
                        />
                </LinearLayout>

            </TableRow>
            <TableRow
                android:layout_height="185dp"
                android:gravity="center"
                android:padding="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/mybtnyellow"
                    android:layout_marginRight="20dp"
                    android:paddingTop="10dp"
                    >

                    <Button
                        android:id="@+id/Order_BTN_Daily_SoftDrinks"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:background="@drawable/juice"
                        android:layout_gravity="center"
                        android:textColor="#CC3636"
                        android:textSize="20dp" />
                    <TextView
                        android:text="@string/soft_drinks"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textColor="#CC3636"
                        android:textSize="15dp"
                        />
                </LinearLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/mybtnyellow"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/Order_BTN_Food"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:background="@drawable/pizza"
                        android:layout_gravity="center"
                        android:textColor="#CC3636"
                        android:textSize="20dp" />
                    <TextView
                        android:text="@string/food"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textColor="#CC3636"
                        android:textSize="15dp"
                        />
                </LinearLayout>

            </TableRow>
            <TableRow
                android:layout_height="185dp"
                android:gravity="center"
                android:padding="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/mybtnyellow"
                    android:layout_marginRight="20dp"
                    android:paddingTop="10dp"
                    >

                    <Button
                        android:id="@+id/Order_BTN_Daily_Deals"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:background="@drawable/deal"
                        android:layout_gravity="center"
                        android:textColor="#CC3636"
                        android:textSize="20dp" />
                    <TextView
                        android:text="@string/deals"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textColor="#CC3636"
                        android:textSize="15dp"
                        />
                </LinearLayout>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <Button
                android:id="@+id/Order_BTN_Daily_Add"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="10dp"
                android:layout_margin="5dp"
                android:background="@drawable/mybtn"/>
            <Button
                android:id="@+id/Order_BTN_Daily_View"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/view_order"
                android:textSize="10dp"
                android:background="@drawable/mybtn"
                android:layout_margin="5dp"
                />
        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>